--- a/shop.html
+++ b/shop.html
@@ -26,7 +26,7 @@
       <div class="product" data-name="CROP TOP" data-price="15">
         <img src="IMG_5723.JPG" alt="CROP TOP">
         <h3>CROP TOP</h3>
-        <p>$15.00</p>
+        <p>₦15.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -34,14 +34,14 @@
       <div class="product" data-name="T-Shirt" data-price="25">
         <img src="IMG_5731.JPG" alt="Shirt">
         <h3>Shirt</h3>
-        <p>$25.00</p><input type="number" min="1" value="1" class="quantity-input">
+        <p>₦25.00</p><input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
 
       <div class="product" data-name="Jacket" data-price="60">
         <img src="IMG_5726.JPG" alt="Jacket">
         <h3>Jacket</h3>
-        <p>$60.00</p>
+        <p>₦60.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -49,7 +49,7 @@
       <div class="product" data-name="Hoodies" data-price="40">
         <img src="IMG_5728.JPG" alt="Hoodies">
         <h3>Hoodies</h3>
-        <p>$40.00</p>
+        <p>₦40.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -57,7 +57,7 @@
       <div class="product" data-name="Jerseys Shirt" data-price="35">
         <img src="IMG_5722.JPG" alt="Jerseys Shirt">
         <h3>Jerseys Shirt</h3>
-        <p>$35.00</p>
+        <p>₦35.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -67,11 +67,12 @@
     <div class="cart">
       <h2>Your Cart</h2>
       <ul id="cart-items"></ul>
-      <p id="cart-total">Total: $0.00</p>
+      <p id="cart-total">Total: ₦0.00</p>
       <button id="checkout" class="btn">Checkout</button>
     </div>
   </section>
 
   <script src="script.js"></script>
 </body>
+
 </html>
