Modify product names and prices in shop.html
Updated product details including names and prices.

--- a/shop.html
+++ b/shop.html
@@ -25,23 +25,23 @@
     <div class="products">
       <div class="product" data-name="CROP TOP" data-price="15">
         <img src="IMG_5723.JPG" alt="CROP TOP">
-        <h3>CROP TOP</h3>
-        <p>₦15.00</p>
+        <h3>TANK TOP</h3>
+        <p>₦25,000.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
 
       <div class="product" data-name="T-Shirt" data-price="25">
-        <img src="IMG_5731.JPG" alt="Shirt">
+        <img src="IMG_5731.JPG" alt="T-Shirt">
         <h3>Shirt</h3>
-        <p>₦25.00</p><input type="number" min="1" value="1" class="quantity-input">
+        <p>₦35,000.00</p><input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
 
       <div class="product" data-name="Jacket" data-price="60">
         <img src="IMG_5726.JPG" alt="Jacket">
         <h3>Jacket</h3>
-        <p>₦60.00</p>
+        <p>₦5O,000.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -49,7 +49,7 @@
       <div class="product" data-name="Hoodies" data-price="40">
         <img src="IMG_5728.JPG" alt="Hoodies">
         <h3>Hoodies</h3>
-        <p>₦40.00</p>
+        <p>₦60,000.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -57,7 +57,7 @@
       <div class="product" data-name="Jerseys Shirt" data-price="35">
         <img src="IMG_5722.JPG" alt="Jerseys Shirt">
         <h3>Jerseys Shirt</h3>
-        <p>₦35.00</p>
+        <p>₦60,000.00</p>
         <input type="number" min="1" value="1" class="quantity-input">
         <button class="btn add-to-cart">Add to Cart</button>
       </div>
@@ -76,3 +76,4 @@
 </body>
 
 </html>
+
