Change Formspree action URL in checkout form
Updated Formspree action URL in hidden form.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
   <script src="script.js"></script>
   
 </body><!-- Hidden Formspree form -->
-<form id="checkout-form" action="https://formspree.io/f/xgvnkbnj" method="POST" style="display:none;">
+<form id="checkout-form" action="https://formspree.io/f/xovkdzwz" method="POST" style="display:none;">
   <input type="hidden" name="order_number" id="order-number">
   <input type="hidden" name="order_details" id="order-details">
   <input type="hidden" name="total_amount" id="total-amount">
+
 </form>
