Integrate Formspree for checkout process
Added a hidden Formspree form for checkout functionality.

--- a/shop.html
+++ b/shop.html
@@ -72,11 +72,19 @@
       <button id="checkout" class="btn">Checkout</button>
     </div>
   </section>
+  
+  </body><!-- Hidden Formspree form -->
+<form id="checkout-form" action="https://formspree.io/f/xovkdzwz" method="POST" style="display:none;">
+  <input type="hidden" name="order_number" id="order-number">
+  <input type="hidden" name="order_details" id="order-details">
+  <input type="hidden" name="total_amount" id="total-amount">
+</form>
 
   <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
 
