--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <form 
       class="contact-form"
       id="contact-form"
-      action="https://formspree.io/f/xgvnkbnj"
+      action="https://formspree.io/f/xovkdzwz"
       method="POST"
     >
       <input type="text" name="name" placeholder="Your Name" required>
@@ -67,4 +67,5 @@
   </script>
 
 </body>
+
 </html>
