--- a/shop.html
+++ b/shop.html
@@ -7,82 +7,124 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Navigation -->
-  <header>
-    <nav class="navbar">
-      <div class="logo">Kingdom Dynamic</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="shop.html" class="active">Shop</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <!-- Shop Section -->
-  <section class="shop">
-    <h1>Our Collection</h1>
-    <div class="products">
-      <div class="product" data-name="CROP TOP" data-price="15">
-        <img src="IMG_5723.JPG" alt="CROP TOP">
-        <h3>TANK TOP</h3>
-        <p>₦25,000.00</p>
-        <input type="number" min="1" value="1" class="quantity-input">
-        <button class="btn add-to-cart">Add to Cart</button>
+<!-- Navigation -->
+<header>
+  <nav class="navbar">
+    <div class="logo">Kingdom Dynamic</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html" class="active">Shop</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Shop Section -->
+<section class="shop">
+  <h1>Our Collection</h1>
+
+  <div class="products">
+
+    <!-- PRODUCT -->
+    <div class="product" data-name="CROP TOP" data-price="15000">
+      <img src="IMG_5723.JPG" alt="CROP TOP">
+      <h3>CROP TOP</h3>
+      <p>₦15,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
       </div>
 
-      <div class="product" data-name="T-Shirt" data-price="25">
-        <img src="IMG_5731.JPG" alt="T-Shirt">
-        <h3>Shirt</h3>
-        <p>₦35,000.00</p><input type="number" min="1" value="1" class="quantity-input">
-        <button class="btn add-to-cart">Add to Cart</button>
-      </div>
-
-      <div class="product" data-name="Jacket" data-price="60">
-        <img src="IMG_5726.JPG" alt="Jacket">
-        <h3>Jacket</h3>
-        <p>₦50,000.00</p>
-        <input type="number" min="1" value="1" class="quantity-input">
-        <button class="btn add-to-cart">Add to Cart</button>
-      </div>
-
-      <div class="product" data-name="Hoodies" data-price="40">
-        <img src="IMG_5728.JPG" alt="Hoodies">
-        <h3>Hoodies</h3>
-        <p>₦60,000.00</p>
-        <input type="number" min="1" value="1" class="quantity-input">
-        <button class="btn add-to-cart">Add to Cart</button>
-      </div>
-
-      <div class="product" data-name="Jerseys Shirt" data-price="60000.00">
-        <img src="IMG_5722.JPG" alt="Jerseys Shirt">
-        <h3>Jerseys Shirt</h3>
-        <p>₦60,000.00</p>
-        <input type="number" min="1" value="1" class="quantity-input">
-        
-        <button class="btn add-to-cart">Add to Cart</button>
-      </div>
+      <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <!-- Cart Section -->
-    <div class="cart">
-      <h2>Your Cart</h2>
-      <ul id="cart-items"></ul>
-      <p id="cart-total">Total: ₦0.00</p>
-      <button id="checkout" class="btn">Checkout</button>
+    <div class="product" data-name="T-Shirt" data-price="25000">
+      <img src="IMG_5731.JPG" alt="T-Shirt">
+      <h3>T-Shirt</h3>
+      <p>₦25,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
     </div>
-  </section>
-  
-  </body><!-- Hidden Formspree form -->
-<form id="checkout-form" action="https://formspree.io/f/xovkdzwz" method="POST" style="display:none;">
+
+    <div class="product" data-name="Jacket" data-price="60000">
+      <img src="IMG_5726.JPG" alt="Jacket">
+      <h3>Jacket</h3>
+      <p>₦60,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Hoodies" data-price="40000">
+      <img src="IMG_5728.JPG" alt="Hoodies">
+      <h3>Hoodies</h3>
+      <p>₦40,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Jerseys Shirt" data-price="35000">
+      <img src="IMG_5722.JPG" alt="Jerseys Shirt">
+      <h3>Jerseys Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+  </div>
+
+  <!-- CART -->
+  <div class="cart">
+    <h2>Your Cart</h2>
+    <ul id="cart-items"></ul>
+    <p id="cart-total">Total: ₦0.00</p>
+    <button id="checkout" class="btn">Checkout</button>
+  </div>
+</section>
+
+<!-- HIDDEN FORMSPREE CHECKOUT FORM -->
+<form
+  id="checkout-form"
+  action="https://formspree.io/f/xovkdzwz"
+  method="POST"
+  style="display:none;"
+>
   <input type="hidden" name="order_number" id="order-number">
   <input type="hidden" name="order_details" id="order-details">
   <input type="hidden" name="total_amount" id="total-amount">
 </form>
 
-  <script src="script.js"></script>
-</body>
+<!-- SCRIPTS -->
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script src="script.js"></script>
 
+</body>
 </html>
 
 
