--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
   <form
     class="contact-form"
     id="contact-form"
-    action="https://formspree.io/f/xgvnkbnj"
+    action="https://formspree.io/f/xovkdzwz"
     method="POST"
   >
     <input type="text" name="name" placeholder="Your Name" required>
@@ -82,3 +82,4 @@
 
 </body>
 </html>
+
