Update product names and add new product

--- a/shop.html
+++ b/shop.html
@@ -27,9 +27,9 @@
   <div class="products">
 
     <!-- PRODUCT -->
-    <div class="product" data-name="CROP TOP" data-price="15000">
-      <img src="IMG_5723.JPG" alt="CROP TOP">
-      <h3>CROP TOP</h3>
+    <div class="product" data-name="TANK TOP" data-price="15000">
+      <img src="IMG_5723.JPG" alt="TANK TOP">
+      <h3>TANK TOP</h3>
       <p>₦15,000</p>
 
       <div class="qty-control">
@@ -41,9 +41,9 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="T-Shirt" data-price="25000">
-      <img src="IMG_5731.JPG" alt="T-Shirt">
-      <h3>T-Shirt</h3>
+    <div class="product" data-name="Tee Shirt" data-price="25000">
+      <img src="IMG_5731.JPG" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
       <p>₦25,000</p>
 
       <div class="qty-control">
@@ -126,6 +126,7 @@
 
 </body>
 </html>
+
 
 
 
