Update product prices and add new items

--- a/shop.html
+++ b/shop.html
@@ -27,23 +27,9 @@
   <div class="products">
 
     <!-- PRODUCT -->
-    <div class="product" data-name="TANK TOP" data-price="15000">
+    <div class="product" data-name="TANK TOP" data-price="25000">
       <img src="IMG_5723.JPG" alt="TANK TOP">
       <h3>TANK TOP</h3>
-      <p>₦15,000</p>
-
-      <div class="qty-control">
-        <button class="qty-btn minus">−</button>
-        <input type="number" class="quantity-input" value="1" min="1">
-        <button class="qty-btn plus">+</button>
-      </div>
-
-      <button class="btn add-to-cart">Add to Cart</button>
-    </div>
-
-    <div class="product" data-name="Tee Shirt" data-price="25000">
-      <img src="IMG_5731.JPG" alt="Tee Shirt">
-      <h3>Tee Shirt</h3>
       <p>₦25,000</p>
 
       <div class="qty-control">
@@ -55,9 +41,24 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="Jacket" data-price="60000">
+
+    <div class="product" data-name="Jacket" data-price="50000">
       <img src="IMG_5726.JPG" alt="Jacket">
       <h3>Jacket</h3>
+      <p>₦50,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Hoodies" data-price="60000">
+      <img src="IMG_5728.JPG" alt="Hoodies">
+      <h3>Hoodies</h3>
       <p>₦60,000</p>
 
       <div class="qty-control">
@@ -69,10 +70,10 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="Hoodies" data-price="40000">
-      <img src="IMG_5728.JPG" alt="Hoodies">
-      <h3>Hoodies</h3>
-      <p>₦40,000</p>
+    <div class="product" data-name="Jerseys Shirt" data-price="60000">
+      <img src="IMG_5722.JPG" alt="Jerseys Shirt">
+      <h3>Jerseys Shirt</h3>
+      <p>₦60,000</p>
 
       <div class="qty-control">
         <button class="qty-btn minus">−</button>
@@ -83,9 +84,36 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <div class="product" data-name="Jerseys Shirt" data-price="35000">
-      <img src="IMG_5722.JPG" alt="Jerseys Shirt">
-      <h3>Jerseys Shirt</h3>
+    <div class="product" data-name="Harmless Shirt" data-price="25000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM.jpeg" alt="Harmless Shirt">
+      <h3>Harmless Shirt</h3>
+      <p>₦25,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Zip-up track Jacket" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (3).jpeg" alt="Zip-up track Jacket">
+      <h3>Zip-up track Jacket</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+    <div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="IMG_5731.JPG" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
       <p>₦35,000</p>
 
       <div class="qty-control">
@@ -97,7 +125,73 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-  </div>
+    <div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM.jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (2).jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (1).jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="CROP TOP" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM (2).jpeg" alt="CROP TOP">
+      <h3>CROP TOP</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Crop TOP" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM (1).jpeg" alt="Crop TOP">
+      <h3>Crop TOP</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
 
   <!-- CART -->
   <div class="cart">
@@ -126,9 +220,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
