Modify contact form and add logo
Updated the contact form action URL and added a logo.

--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="icon" type="image/png" href="favicon.png/WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KD LUXURY - Contact</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
 <!-- Navigation -->
 <header>
   <nav class="navbar">
-    <div class="logo">Kingdom Dynamic</div>
+    <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg" alt="Kingdom Dynamic Logo" class="brand-logo">
+  <h1>Kingdom Dynamic</h1>
+</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="shop.html">Shop</a></li>
@@ -27,7 +26,7 @@
   <form
     class="contact-form"
     id="contact-form"
-    action="https://formspree.io/f/xovkdzwz"
+    action="https://formspree.io/f/xgvnkbnj"
     method="POST"
   >
     <input type="text" name="name" placeholder="Your Name" required>
@@ -82,4 +81,5 @@
 
 </body>
 </html>
+
 
