Update index.html with favicon and brand logo
Added favicon and brand logo to the header.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="icon" type="image/png" href="favicon.png/WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KD LUXURY - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +9,10 @@
   <!-- Navigation -->
   <header>
     <nav class="navbar">
-      <div class="logo">Kingdom Dynamic</div>
+      <div class="brand-header">
+  <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg" alt="Kingdom Dynamic Logo" class="brand-logo">
+  <h1>Kingdom Dynamic</h1>
+</div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
@@ -36,5 +38,4 @@
   <input type="hidden" name="order_number" id="order-number">
   <input type="hidden" name="order_details" id="order-details">
   <input type="hidden" name="total_amount" id="total-amount">
-
 </form>
