--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="icon" type="image/png" href="favicon.png/WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KD LUXURY - Shop</title>
@@ -11,7 +11,9 @@
 <!-- Navigation -->
 <header>
   <nav class="navbar">
-    <div class="logo">Kingdom Dynamic</div>
+    <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg" alt="Kingdom Dynamic Logo" class="brand-logo">
+  <h1>Kingdom Dynamic</h1>
+</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="shop.html" class="active">Shop</a></li>
@@ -205,7 +207,7 @@
 <!-- HIDDEN FORMSPREE CHECKOUT FORM -->
 <form
   id="checkout-form"
-  action="https://formspree.io/f/xovkdzwz"
+  action="https://formspree.io/f/xgvnkbnj"
   method="POST"
   style="display:none;"
 >
@@ -219,4 +221,15 @@
 <script src="script.js"></script>
 
 </body>
+<a
+  href="https://wa.me/2348146814953?text=Hello%20I%20need%20help"
+  class="whatsapp-float"
+  target="_blank"
+  aria-label="Chat on WhatsApp"
+>
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg"
+    alt="WhatsApp"
+  />
+</a>
 </html>
