--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="icon" type="image/png" href="favicon.png/WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
+ <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>KD LUXURY - Home</title>
+
+  <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,3 +44,4 @@
   <input type="hidden" name="order_details" id="order-details">
   <input type="hidden" name="total_amount" id="total-amount">
 </form>
+
