--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,7 @@
 
   <div class="products">
 
-    <!-- PRODUCT -->
+   <!-- PRODUCT -->
     <div class="product" data-name="TANK TOP" data-price="25000">
       <img src="IMG_5723.JPG" alt="TANK TOP">
       <h3>TANK TOP</h3>
@@ -62,9 +62,157 @@
       <button class="btn add-to-cart">Add to Cart</button>
     </div>
 
-    <!-- (ALL YOUR OTHER PRODUCTS REMAIN UNCHANGED) -->
 
-  </div>
+    <div class="product" data-name="Jacket" data-price="50000">
+      <img src="IMG_5726.JPG" alt="Jacket">
+      <h3>Jacket</h3>
+      <p>₦50,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Hoodies" data-price="60000">
+      <img src="IMG_5728.JPG" alt="Hoodies">
+      <h3>Hoodies</h3>
+      <p>₦60,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Jerseys Shirt" data-price="60000">
+      <img src="IMG_5722.JPG" alt="Jerseys Shirt">
+      <h3>Jerseys Shirt</h3>
+      <p>₦60,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Harmless Shirt" data-price="25000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM.jpeg" alt="Harmless Shirt">
+      <h3>Harmless Shirt</h3>
+      <p>₦25,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Zip-up track Jacket" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (3).jpeg" alt="Zip-up track Jacket">
+      <h3>Zip-up track Jacket</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+    <div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="IMG_5731.JPG" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM.jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (2).jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+<div class="product" data-name="Tee Shirt" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.27 PM (1).jpeg" alt="Tee Shirt">
+      <h3>Tee Shirt</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="CROP TOP" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM (2).jpeg" alt="CROP TOP">
+      <h3>CROP TOP</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
+
+    <div class="product" data-name="Crop TOP" data-price="35000">
+      <img src="WhatsApp Image 2025-12-29 at 2.19.26 PM (1).jpeg" alt="Crop TOP">
+      <h3>Crop TOP</h3>
+      <p>₦35,000</p>
+
+      <div class="qty-control">
+        <button class="qty-btn minus">−</button>
+        <input type="number" class="quantity-input" value="1" min="1">
+        <button class="qty-btn plus">+</button>
+      </div>
+
+      <button class="btn add-to-cart">Add to Cart</button>
+    </div>
 
   <!-- CART -->
   <div class="cart">
@@ -74,7 +222,6 @@
     <button id="checkout" class="btn">Checkout</button>
   </div>
 </section>
-
 <!-- HIDDEN CHECKOUT FORM -->
 <form
   id="checkout-form"
@@ -106,3 +253,4 @@
 
 </body>
 </html>
+
