Fix HTML encoding issues in shop.html

--- a/shop.html
+++ b/shop.html
@@ -240,7 +240,7 @@
 
 <!-- WHATSAPP FLOAT -->
 <a
-  href="https://wa.me/2348146814953?text=Hello%20I%20need%20help"
+  href="https://wa.me/2348146814953?text=Hello This is my order Number"
   class="whatsapp-float"
   target="_blank"
   aria-label="Chat on WhatsApp"
@@ -253,4 +253,5 @@
 
 </body>
 </html>
+
 
