--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="icon" type="image/png" href="favicon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KD LUXURY - Shop</title>
@@ -253,5 +253,6 @@
 
 </body>
 </html>
+
 
 
