--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="brand-header">
       <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg" class="brand-logo" alt="Logo">
-      <h1>Kingdom Dynamic</h1>
+      <h1>Kingdom Dynamics</h1>
     </div>
 
     <!-- DESKTOP LINKS -->
@@ -253,6 +253,7 @@
 
 </body>
 </html>
+
 
 
 
