Add menu overlay and fix mobile menu structure
Added missing overlay and fixed IDs and classes in mobile menu.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar">
     <div class="brand-header">
       <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg" class="brand-logo" alt="Logo">
-      <h1>Kingdom Dynamic</h1>
+      <h1>Kingdom Dynamics</h1>
     </div>
 
     <!-- DESKTOP LINKS -->
@@ -59,6 +59,7 @@
   <input type="hidden" name="order_details" id="order-details">
   <input type="hidden" name="total_amount" id="total-amount">
 </form>
+
 
 
 
