--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <img src="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg"
            alt="Kingdom Dynamic Logo"
            class="brand-logo">
-      <h1>Kingdom Dynamic</h1>
+      <h1>Kingdom Dynamics</h1>
     </div>
 
     <!-- DESKTOP LINKS -->
@@ -106,6 +106,7 @@
 
 </body>
 </html>
+
 
 
 
