--- a/shop.html
+++ b/shop.html
@@ -3,9 +3,11 @@
 <link rel="icon" type="image/png" href="favicon.png/WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KD LUXURY - Shop</title>
+  <title>KD LUXURY - shop</title>
+  <link rel="icon" type="image/png" href="WhatsApp Image 2026-01-06 at 10.02.55 AM.jpeg">
   <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
 
@@ -253,6 +255,7 @@
 
 </body>
 </html>
+
 
 
 
